@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
 	<groupId>org.openidentityplatform.opendj</groupId>
     <artifactId>opendj-parent</artifactId>
-	<version>4.8.3-SNAPSHOT</version>
+	<version>4.9.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>OpenDJ Directory Services Project</name>
@@ -35,12 +35,12 @@
         <product.locales>ca_ES,es,de,fr,ja,ko,pl,zh_CN,zh_TW</product.locales>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <localized.jars.classifier>i18n</localized.jars.classifier>
-        <commons.version>2.2.4-SNAPSHOT</commons.version>
+        <commons.version>2.2.4</commons.version>
         <freemarker.version>2.3.31</freemarker.version>
         <grizzly-framework.version>2.3.35</grizzly-framework.version>
         <metrics-core.version>3.1.2</metrics-core.version>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
         <!-- OSGi bundles properties -->
         <opendj.osgi.import.additional />
         <!--
@@ -286,22 +286,6 @@
     	<finalName>${project.groupId}.${project.artifactId}</finalName>
         <plugins>
              <plugin>
-                <groupId>org.openidentityplatform.maven.plugins</groupId>
-                <artifactId>javadoc-updater-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>site</phase>
-                        <goals>
-                            <goal>fixjavadoc</goal>
-                        </goals>
-                        <configuration>
-                            <directory>${project.reporting.outputDirectory}</directory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
@@ -327,6 +311,7 @@
 			  </executions>
 			  <configuration>
 			  	<doclint>none</doclint>
+                <notimestamp>true</notimestamp>
 			  </configuration>
 			</plugin>
 			<plugin>
@@ -368,10 +353,6 @@
                         <fork>true</fork>
                         <compilerArgs>
                         	<arg>-XDignore.symbol.file</arg>
-                            <arg>--add-exports</arg>
-                            <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
-                            <arg>--add-exports</arg>
-                            <arg>java.base/sun.security.tools.keytool=ALL-UNNAMED</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -479,7 +460,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>5.1.9</version>
+                    <version>2.3.7</version>
                     <extensions>true</extensions>
                     <configuration>
                         <instructions>
@@ -721,6 +702,15 @@
             </modules>
         </profile>
         <profile>
+            <id>set-compiler-release</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
+        </profile>
+		<profile>
 	      <id>jdk16.options</id>
 	      <activation>
 	        <jdk>[16,)</jdk>
